GNOME Bugzilla – Bug 701715
devices: fix warning when creating bluetooth device
Last modified: 2013-06-10 13:36:53 UTC
pointed out by pochu on irc
Created attachment 246151 [details] [review] devices: fix warning when creating bluetooth device nm_device_bt_new() was trying to set NM_DEVICE_MANAGED, but that's been read-only now for a while. Fortunately, it was already trying to set it to FALSE, which is the default, so we can just remove that line.
(In reply to comment #1) > Created an attachment (id=246151) [details] [review] > devices: fix warning when creating bluetooth device > > nm_device_bt_new() was trying to set NM_DEVICE_MANAGED, but that's > been read-only now for a while. Fortunately, it was already trying to > set it to FALSE, which is the default, so we can just remove that > line. It looks good.
Attachment 246151 [details] pushed as 63ea8e5 - devices: fix warning when creating bluetooth device