src/devices/nm-device-bt.h
@@ -58,8 +58,7 @@ GType nm_device_bt_get_type (void);
 NMDevice *nm_device_bt_new (const char *udi,
                             const char *bdaddr,
                             const char *name,
-                            guint32 capabilities,
-                            gboolean managed);
+                            guint32 capabilities);
 
 guint32 nm_device_bt_get_capabilities (NMDeviceBt *device);
 
